add Google Safebrowsing Checker

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, stdout, R
+log4j.rootLogger=INFO, stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -16,4 +16,4 @@ log4j.appender.R.MaxBackupIndex=1
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.org.demond.java.dereference.Start = DEBUG
+log4j.logger.org.demond.java.dereference.Start = INFO
